<resources>
    <string name="app_name">Tasks</string>
    <string name="kilometers">%1$s km</string>
    <string name="task">SERVER</string>
    <string name="distance">DISTANCE</string>
    <string name="invalid_credentials">Invalid credentials!</string>
    <string name="error_email">Invalid E-Mail</string>
    <string name="error_password">Password can not be blank</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="btn_log_in">Log In</string>
    <string name="title_sign_in">Sign in</string>
    <string name="text_login_switch">Login / Register</string>
    <string name="priority_high">High</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_low">Low</string>
    <string name="title_tasks_list">My Tasks</string>
    <string name="hint_edit_task_title">Reminder text</string>
    <string name="title_edit_task">Edit Task</string>
    <string name="priority_label_high">High</string>
    <string name="priority_label_medium">Medium</string>
    <string name="priority_label_low">Low</string>
    <string name="label_priority">Priority:</string>
    <string name="hint_due_to">Due to</string>
    <string name="label_due_to">Due to</string>
    <string name="menu_item_title_settings">Settings</string>
    <string name="title_create_task">Create Task</string>
    <string name="error_date_in_past">Date can not be in past</string>
    <string name="error_empty_text">Task text can not be empty</string>
    <string name="title_task_details">Task Details</string>
    <string name="hint_priority">Priority</string>
    <string name="title_dialog_delete_task">Delete task</string>
    <string name="description_dialog_delete_task">Are you sure you want to delete this task?</string>
    <string name="hint_reminder">Reminder</string>
    <string name="title_reminder_disabled">Disabled</string>
    <string name="label_enable_reminder">Enable reminder</string>
    <string name="reminder_option_5min">5 minutes before</string>
    <string name="reminder_option_10min">10 minutes before</string>
    <string name="reminder_option_30min">30 minutes before</string>
    <string name="reminder_option_hour">1 hour before</string>
    <string name="reminder_notification_5min">In 5 minutes</string>
    <string name="reminder_notification_10min">In 10 minutes</string>
    <string name="reminder_notification_30min">In 30 minutes</string>
    <string name="reminder_notification_hour">In 1 hour</string>
    <string name="reminder_option_disabled">Disabled</string>
    <string name="error_reminder_in_past">Reminder time can not be in past</string>
    <string name="label_notification">Notification</string>
    <string name="title_reminders_list">My reminders</string>
    <string name="text_reminder">Reminder</string>
    <string name="notification_channel_reminders">Task reminders</string>
    <string name="no_items">No items</string>
    <string name="no_tasks">No tasks. Tap plus to create one</string>
    <string name="no_reminders">No reminders</string>
    <string name="message_refresh">Tasks refreshed</string>
    <string name="title_settings">Settings</string>
    <string name="title_sort_by_property">Sort by </string>
    <string name="title_sort_order">Sorting order</string>
    <string name="log_out">Log Out</string>
    <string name="item_sort_by_title">Title</string>
    <string name="item_sort_by_date">Date</string>
    <string name="item_sort_by_priority">Priority</string>
    <string name="item_sort_order_descending">Descending</string>
    <string name="item_sort_order_ascending">Ascending</string>
    <string name="description_dialog_logout">Are you sure, you want to log out?</string>
    <string name="title_dialog_logout">Log out</string>
</resources>
