<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_AR"
        style="@style/ToolbarDefault">

        <TextView
            android:text="@string/title_reminders_list"
            style="@style/ToolbarTextStyle"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvReminders_AR"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_AR"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/llEmptyList_AR"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/no_items"
            android:src="@drawable/vector_search" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_reminders"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_large" />
    </LinearLayout>

</RelativeLayout>