<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/clContainer_AT"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <RelativeLayout
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_AS"
            style="@style/ToolbarDefault">

            <ImageView
                android:id="@+id/ivReminders_AT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/vector_bell" />

            <TextView
                style="@style/ToolbarTextStyle"
                android:text="@string/title_tasks_list" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/llEmptyList_AT"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/no_items"
                android:src="@drawable/vector_search" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_tasks"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_large" />
        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srTaskRefresh_AT"
            android:layout_below="@+id/toolbar_AS"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTasks_AT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCreateTask_AT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/spacing_main"
        android:src="@drawable/vector_plus" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>